# tauri-miniboard

./: README.md  client.html  index.html  main.db.example  package-lock.json  package.json  settings.html  vite.config.ts
src/: db.ts  main.ts  store.ts  styles.css  ws.ts
src-tauri/: Cargo.toml  client.html  main.db.example  tauri.conf.json
src-tauri/src/: main.rs
src/client/: clientApp.svelte  clientmain.ts  clientstore.ts
src/client/lib/: YoutubePlayer.svelte
src/lib/: Board.svelte  Titlebar.svelte  YoutubePlayer.svelte
src/main/: App.svelte  db.ts  store.ts  styles.css  ws.ts
src/main/lib/: Board.svelte  Titlebar.svelte  YoutubePlayer.svelte
src/main/types/: Boards.ts  Platform.ts  PlayState.ts  Track.ts
src/settings/: SettingsApp.svelte  settingsmain.ts
src/settings/lib/: SideBar.svelte
src/types/: Keymap.ts  WsMessage.ts
ws/: wsmain.cjs
ws-legacy/: wsmain.cjs
